[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A simple key-value in-memory store"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
thiserror = "1.0.30" 
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"